--- a/package.json
+++ b/package.json
@@ -17,16 +17,23 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "create-migration": "yarn run typeorm migration:create --config src/config/typeorm.config.ts -n",
+    "run-migrations": "yarn run typeorm migration:run --config src/config/typeorm.config.ts",
+    "revert-migrations": "yarn run typeorm migration:revert --config src/config/typeorm.config.ts ",
+    "generate-migrations": "yarn run typeorm migration:generate --config src/config/typeorm.config.ts "
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "joi": "^17.9.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
