--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.12",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/cookie-session": "^2.0.48",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-session": "^2.1.0",
     "joi": "^17.9.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
