--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
     "test:cov": "cross-env NODE_ENV=test jest --coverage",
     "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --maxWorkers=1 --detectOpenHandles",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
-    "create-migration": "yarn run typeorm migration:create --config src/config/typeorm.config.ts -n",
-    "run-migrations": "yarn run typeorm migration:run --config src/config/typeorm.config.ts",
-    "revert-migrations": "yarn run typeorm migration:revert --config src/config/typeorm.config.ts ",
-    "generate-migrations": "yarn run typeorm migration:generate --config src/config/typeorm.config.ts "
+    "typeorm": "typeorm-ts-node-esm"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
