--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "cross-env NODE_ENV=test jest --coverage",
     "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --maxWorkers=1 --detectOpenHandles",
-    "typeorm": "typeorm-ts-node-esm"
+    "typeorm": "cross-env NODE_ENV=development typeorm-ts-node-commonjs"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
